--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,26 @@
  *= require_self
  */
 
- .map {
-   height: 500px;
-   width: 500px
- }
+h3 {
+  text-align: center;
+  color: blue;
+}
+
+ul {
+  list-style: none;
+}
+
+.bench-list {
+  text-align: center;
+}
+
+.bench-list li:hover {
+  color: blue;
+}
+
+.map {
+  height: 500px;
+  width: 500px;
+  margin: auto;
+  border: 5px solid black;
+}
